addition of wandb section for xgboost with selected features

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -960,19 +960,6 @@
     "percentiles = np.linspace(0, 100, 11)\n",
     "goal_rates = compute_goal_rate_by_percentile(y_val, y_proba, percentiles)\n",
     "\n",
-    "def plot_line_2_variables(x, y, color, label, xinf, xsup, x_label=\"Centile de probabilité\", y_label=\"Taux de buts (%)\"):\n",
-    "    plt.figure(figsize=(8, 6))\n",
-    "    plt.plot(x, y, marker='', color=color)\n",
-    "    plt.title(label=label, fontsize=14)\n",
-    "    plt.xlabel(x_label, fontsize=12)\n",
-    "    plt.xlim(xinf,xsup)\n",
-    "    plt.ylabel(y_label, fontsize=12)\n",
-    "    plt.ylim(0,100)\n",
-    "    plt.grid(alpha=0.3)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
     "plot_line_2_variables(x=percentiles[:-1], y=goal_rates, color='green', label=\"Taux de buts par centile de probabilité\", xinf=100, xsup=0, x_label=\"Centile de probabilité\", y_label=\"Taux de buts (%)\")"
    ]
   },
@@ -1416,7 +1403,7 @@
     "auc_roc1 = roc_auc_score(y2_val, y_proba1)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"auc_roc\": auc_roc1})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc1})\n",
     "\n",
     "# Sauvegarder le modèle\n",
     "model_path1 = \"logistic_regression_distance.pkl\"\n",
@@ -1469,7 +1456,7 @@
     "auc_roc2 = roc_auc_score(y2_val, y_proba2)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"auc_roc\": auc_roc2})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc2})\n",
     "\n",
     "# Sauvegarder le modèle\n",
     "model_path2 = \"logistic_regression_angle.pkl\"\n",
@@ -1522,7 +1509,7 @@
     "auc_roc3 = roc_auc_score(y2_val, y_proba3)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"auc_roc\": auc_roc3})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc3})\n",
     "\n",
     "# Sauvegarder le modèle\n",
     "model_path3 = \"logistic_regression_distance_and_angle.pkl\"\n",
@@ -1613,7 +1600,7 @@
     "characteristics = ['shotDistance', 'shotAngle']\n",
     "\n",
     "x = train_data[characteristics].dropna()\n",
-    "y = train_data['isGoal'][X.index]"
+    "y = train_data['isGoal'][x.index]"
    ]
   },
   {
@@ -1810,10 +1797,10 @@
     "# Évaluer le modèle (exemple avec AUC ROC)\n",
     "y_predicted_prob = xgb.predict_proba(x_val)[:, 1]\n",
     "\n",
-    "auc_roc1 = roc_auc_score(y2_val, y_predicted_prob)\n",
+    "auc_roc1 = roc_auc_score(y_val, y_predicted_prob)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"auc_roc\": auc_roc1})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc1})\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -1838,17 +1825,9 @@
     "    'shotType',\n",
     "    'previousEventType',\n",
     "    'rebound'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79543bbf-fb0c-46a8-a130-755aa76db429",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "characteristics = ['shotDistance', \n",
+    "]\n",
+    "\n",
+    "num_characteristics = ['shotDistance', \n",
     "                   'shotAngle', \n",
     "                   'numberPeriod', \n",
     "                   'gameSeconds',\n",
@@ -1860,7 +1839,9 @@
     "                   'distanceFromLastEvent',\n",
     "                   'speedFromLastEvent',\n",
     "                  'reboundAngleShot' # changement angle de tir\n",
-    "                  ] + categorial_characteristics"
+    "                  ]\n",
+    "\n",
+    "characteristics = num_characteristics + categorial_characteristics"
    ]
   },
   {
@@ -1870,8 +1851,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = train_data[characteristics].dropna()\n",
-    "y_train = train_data['isGoal'][x_train.index].to_numpy()"
+    "x_full_train = train_data[characteristics].dropna()\n",
+    "y_full_train = train_data['isGoal'][x_full_train.index].to_numpy()"
    ]
   },
   {
@@ -1893,7 +1874,7 @@
     ")\n",
     "\n",
     "# Appliquer la pipeline aux données\n",
-    "x_train_transformed = full_pipeline.fit_transform(x_train)"
+    "x_full_train_transformed = full_pipeline.fit_transform(x_full_train)"
    ]
   },
   {
@@ -1966,7 +1947,7 @@
     "    n_jobs=-1                               # Utilisation de tous les cœurs disponibles\n",
     ")\n",
     "\n",
-    "grid_search.fit(x_train_transformed, y_train)\n",
+    "grid_search.fit(x_full_train_transformed, y_full_train)\n",
     "\n",
     "# Résultats de la meilleure combinaison d'hyperparamètres\n",
     "print(\"Meilleurs hyperparamètres :\", grid_search.best_params_)\n",
@@ -2157,7 +2138,7 @@
     "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"auc_roc\": auc_roc})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc})\n",
     "\n",
     "model_path = \"XGBoost_improved_with_new_features.pkl\"\n",
     "with open(model_path, \"wb\") as f:\n",
@@ -2179,12 +2160,331 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f6f1002-a980-486d-8b80-7b61e131bcc3",
+   "metadata": {},
+   "source": [
+    "### Sélection par importances via forêt aléatoire"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd9c9ed-bdd5-4813-b1b9-ed48b3f4f300",
+   "id": "51c74030-3859-48aa-86ed-fdc67dc6d4ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "from sklearn.metrics import make_scorer, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f04e428f-f172-4425-8b73-4f31bfe5f2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_full_train = train_data[characteristics].dropna()\n",
+    "y_full_train = train_data['isGoal'][x_full_train.index].to_numpy()\n",
+    "\n",
+    "x_full_train_transformed = full_pipeline.fit_transform(x_full_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9b16498-6a8d-4ff9-a2c4-330b5570e178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "clf = ExtraTreesClassifier(n_estimators=100, random_state=42)\n",
+    "clf.fit(x_full_train_transformed, y_full_train)\n",
+    "\n",
+    "# Obtenir l'importance des caractéristiques\n",
+    "importances = clf.feature_importances_\n",
+    "\n",
+    "# Définir plusieurs seuils pour les importances\n",
+    "thresholds = np.linspace(0, max(importances), 10)\n",
+    "\n",
+    "print('importances')\n",
+    "print(importances)\n",
+    "\n",
+    "# Initialiser les variables pour suivre les scores et les seuils\n",
+    "scores_by_threshold = []\n",
+    "\n",
+    "# Définir une validation croisée stratifiée\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Essayer plusieurs seuils pour sélectionner les meilleures caractéristiques\n",
+    "for threshold in thresholds:\n",
+    "    # Sélectionner les caractéristiques importantes\n",
+    "    selector = SelectFromModel(clf, threshold=threshold, prefit=True)\n",
+    "    \n",
+    "    x_train_selected = selector.transform(x_full_train_transformed)\n",
+    "\n",
+    "    xgb_advanced = XGBClassifier(objective='binary:logistic', **best_params)\n",
+    "\n",
+    "    # Calculer la moyenne des scores sur les plis de la validation croisée\n",
+    "    scores = cross_val_score(xgb_advanced, x_train_selected, y_full_train, cv=cv, scoring=make_scorer(negative_ece, needs_proba=True))\n",
+    "    mean_score = np.mean(scores)\n",
+    "\n",
+    "    # Stocker les résultats\n",
+    "    scores_by_threshold.append((threshold, mean_score))\n",
+    "    print(f\"Threshold: {threshold:.4f}, Cross-Validation negative ECE: {mean_score:.4f}\")\n",
+    "\n",
+    "ece_by_threshold = [(t[0], t[1] * -1) for t in scores_by_threshold]\n",
+    "\n",
+    "# Extraire les valeurs pour l'axe x (étiquettes) et l'axe y (hauteur des barres)\n",
+    "thresholds = [x[0] for x in ece_by_threshold]\n",
+    "ece_values = [x[1] for x in ece_by_threshold]\n",
+    "\n",
+    "# Créer le graphique en bâtons\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(thresholds, ece_values, width=0.003, color='skyblue')\n",
+    "\n",
+    "# Ajouter les étiquettes\n",
+    "plt.xlabel('Threshold')\n",
+    "plt.ylabel('Erreur de calibration moyenne')\n",
+    "plt.title('Graphique en bâtons des Thresholds et des érreurs de calibration attendues moyennes')\n",
+    "\n",
+    "# Afficher les étiquettes des thresholds sur l'axe des x\n",
+    "plt.xticks(thresholds, rotation=45)\n",
+    "\n",
+    "# Afficher le graphique\n",
+    "plt.tight_layout()\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.savefig('feature_selection_random_forest')\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55600503-617d-4aa9-a96b-b5daa7f6f147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best_threshold = sorted(ece_by_threshold, key=lambda x: x[1])[0][0] . celui qui minimise l'érruer de calibration\n",
+    "best_threshold = 0.08148290719876781"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbc3cf9e-269e-4783-8c8e-8be75a29f77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = ExtraTreesClassifier(n_estimators=100, random_state=42)\n",
+    "clf.fit(x_full_train_transformed, y_full_train)\n",
+    "\n",
+    "selector = SelectFromModel(clf, threshold=best_threshold, prefit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0123376-f4f4-443a-8a44-fe7e7a772c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ohe = full_pipeline.named_transformers_[\"cat\"]\n",
+    "ohe_columns = ohe.get_feature_names_out(categorial_characteristics)\n",
+    "\n",
+    "# Colonnes \"passthrough\" (non modifiées)\n",
+    "passthrough_columns = num_characteristics\n",
+    "\n",
+    "# Liste finale des colonnes\n",
+    "all_columns = list(ohe_columns) + passthrough_columns\n",
+    "all_columns_array = np.array(all_columns)\n",
+    "\n",
+    "print(\"colonnes conservées\")\n",
+    "print(all_columns_array[selector.get_support()])\n",
+    "'''\n",
+    "['shotDistance' 'shotAngle' 'gameSeconds' 'xCoord' 'yCoord'\n",
+    " 'timeSinceLastEvent' 'distanceFromLastEvent' 'speedFromLastEvent']\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a108b8d-011c-4a47-a3b9-8d404dddd4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_val, y_train, y_val = train_test_split(x_full_train, y_full_train, test_size=0.2, random_state=42, stratify=y_full_train)\n",
+    "\n",
+    "xgb_basic = XGBClassifier(objective='binary:logistic')\n",
+    "xgb_advanced = XGBClassifier(objective='binary:logistic', **best_params)\n",
+    "xgb_advanced_2 = XGBClassifier(objective='binary:logistic', **best_params)\n",
+    "\n",
+    "x_train_transformed = full_pipeline.fit_transform(x_train)\n",
+    "x_train_transformed_2 = selector.transform(x_train_transformed)\n",
+    "\n",
+    "x_val_transformed = full_pipeline.fit_transform(x_val)\n",
+    "x_val_transformed_2 = selector.transform(x_val_transformed)\n",
+    "\n",
+    "xgb_basic.fit(x_train[['shotDistance', 'shotAngle']], y_train)\n",
+    "xgb_advanced.fit(x_train_transformed, y_train)\n",
+    "xgb_advanced_2.fit(x_train_transformed_2, y_train)\n",
+    "\n",
+    "y_predicted_prob_basic = xgb_basic.predict_proba(x_val[['shotDistance', 'shotAngle']])[:, 1]\n",
+    "y_predicted_prob_advanced = xgb_advanced.predict_proba(x_val_transformed)[:, 1]\n",
+    "y_predicted_prob_advanced_2 = xgb_advanced_2.predict_proba(x_val_transformed_2)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b4b38f-dcf7-44a8-9b4d-d002ae11444c",
+   "metadata": {},
+   "source": [
+    "#### ROC/AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73822247-ef13-4fde-86b2-25d5661f18dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, name=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\", ax=plt.gca())\n",
+    "\n",
+    "plt.title(\"ROC Curves for XGBoost Models\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a71b64e0-ea25-4240-a8ec-4c7d9349f167",
+   "metadata": {},
+   "source": [
+    "#### Taux de buts vs percentile de probabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a17b395d-c3ef-4d66-9a53-91457457fb4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_rate_basic = compute_goal_rate_by_percentile(y_val, y_predicted_prob_basic, percentiles)\n",
+    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced, percentiles)\n",
+    "goal_rate_advanced_2 = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced_2, percentiles)\n",
+    "\n",
+    "\n",
+    "# Tracer les taux de buts\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(percentiles[:-1], goal_rate_basic, label=\"XGBoost basique\", color=\"blue\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé\", color=\"green\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_advanced_2, label=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\")\n",
+    "\n",
+    "\n",
+    "plt.title(\"Taux de buts par centile de probabilité\")\n",
+    "plt.xlabel(\"Centile de probabilité\")\n",
+    "plt.xlim(100,0)\n",
+    "plt.ylabel(\"Taux de buts (%)\")\n",
+    "plt.ylim(0, 100)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e899d021-3174-407c-922b-322ed5cdd11b",
+   "metadata": {},
+   "source": [
+    "#### Proportion cumulée des buts par centile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2bfca6-8d85-484a-a1ab-b6c3bcd04b7f",
+   "metadata": {},
+   "source": [
+    "#### Diagramme de fiabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0371819c-fec1-48f5-931b-97c4b5076918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé\")\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques sélectionnées\")\n",
+    "\n",
+    "plt.title(\"Diagramme de fiabilité\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07680930-c6be-44b3-926b-26e253424c71",
+   "metadata": {},
+   "source": [
+    "### Wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f667cdc3-990f-46fd-b72f-630bdc635f5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = wandb.init(\n",
+    "    project=config.WANDB_PROJECT_NAME,  # Nom du projet\n",
+    "    name=\"XGBoost avancé (caractéristiques selectionnées)\",  # Nom de l'expérience\n",
+    "    group=\"XGBoost\",\n",
+    "    tags=[\"XGBoost\", \"selected_features\"],  # Tags pour cette expérience\n",
+    "    entity=config.WANDB_TEAM_NAME\n",
+    ")\n",
+    "\n",
+    "xgb_params = {\n",
+    "    'learning_rate': 0.01,\n",
+    "    'max_depth': 10,\n",
+    "    'n_estimators': 300,\n",
+    "    'subsample': 1.0\n",
+    "}\n",
+    "\n",
+    "# Logger les hyperparamètres dans wandb\n",
+    "wandb.config.update(xgb_params)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced_2)\n",
+    "\n",
+    "# Enregistrer les métriques dans Wandb\n",
+    "wandb.log({\"val_roc_auc\": auc_roc})\n",
+    "\n",
+    "model_path = \"XGBoost_improved_with_selected_features.pkl\"\n",
+    "with open(model_path, \"wb\") as f:\n",
+    "    pickle.dump(xgb_advanced_2, f)\n",
+    "\n",
+    "# Enregistrer le modèle avec WandB\n",
+    "run.log_model(path=\"XGBoost_improved_with_selected_features.pkl\", name=\"XGBoost_improved_with_selected_features\")\n",
+    "\n",
+    "# Terminer l'expérience\n",
+    "wandb.finish()"
+   ]
   },
   {
    "cell_type": "markdown",
