--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -53,6 +53,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "# commenté car j'ai des érreurs liées au package torch qui est assez complique a installer windows\n",
     "#from src.models import model_start"
    ]
@@ -1796,11 +1798,14 @@
     "\n",
     "# Évaluer le modèle (exemple avec AUC ROC)\n",
     "y_predicted_prob = xgb.predict_proba(x_val)[:, 1]\n",
+    "y_predicted = xgb.predict(x_val)\n",
     "\n",
-    "auc_roc1 = roc_auc_score(y_val, y_predicted_prob)\n",
+    "auc_roc = roc_auc_score(y_val, y_predicted_prob)\n",
+    "f1 = f1_score(y_predicted, y_val, average=\"macro\")\n",
+    "ece = compute_ece(y_val, y_predicted_prob)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"val_roc_auc\": auc_roc1})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score\": f1, \"val_expected_cal_error\": ece })\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -1821,13 +1826,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorial_characteristics = [\n",
+    "xgb_categorial_characteristics = [\n",
     "    'shotType',\n",
     "    'previousEventType',\n",
     "    'rebound'\n",
     "]\n",
     "\n",
-    "num_characteristics = ['shotDistance', \n",
+    "xgb_num_characteristics = ['shotDistance', \n",
     "                   'shotAngle', \n",
     "                   'numberPeriod', \n",
     "                   'gameSeconds',\n",
@@ -1841,7 +1846,7 @@
     "                  'reboundAngleShot' # changement angle de tir\n",
     "                  ]\n",
     "\n",
-    "characteristics = num_characteristics + categorial_characteristics"
+    "characteristics = xgb_num_characteristics + xgb_categorial_characteristics"
    ]
   },
   {
@@ -1862,13 +1867,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "\n",
     "full_pipeline = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        (\"cat\", OneHotEncoder(), categorial_characteristics),  # OneHotEncoder pour les colonnes catégorielles\n",
+    "        (\"cat\", OneHotEncoder(), xgb_categorial_characteristics),  # OneHotEncoder pour les colonnes catégorielles\n",
     "    ],\n",
     "    remainder=\"passthrough\"  # Garder les autres colonnes telles quelles\n",
     ")\n",
@@ -2135,10 +2136,13 @@
     "# Logger les hyperparamètres dans wandb\n",
     "wandb.config.update(xgb_params)\n",
     "\n",
-    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced)\n",
+    "y_predicted_advanced = xgb_advanced.predict(x_val_transformed)\n",
     "\n",
-    "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"val_roc_auc\": auc_roc})\n",
+    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced)\n",
+    "f1 = f1_score(y_predicted_advanced, y_val, average=\"macro\")\n",
+    "ece = compute_ece(y_val, y_predicted_prob_advanced)\n",
+    "\n",
+    "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score\": f1, \"val_expected_cal_error\": ece })\n",
     "\n",
     "model_path = \"XGBoost_improved_with_new_features.pkl\"\n",
     "with open(model_path, \"wb\") as f:\n",
@@ -2297,10 +2301,10 @@
    "outputs": [],
    "source": [
     "ohe = full_pipeline.named_transformers_[\"cat\"]\n",
-    "ohe_columns = ohe.get_feature_names_out(categorial_characteristics)\n",
+    "ohe_columns = ohe.get_feature_names_out(xgb_categorial_characteristics)\n",
     "\n",
     "# Colonnes \"passthrough\" (non modifiées)\n",
-    "passthrough_columns = num_characteristics\n",
+    "passthrough_columns = xgb_num_characteristics\n",
     "\n",
     "# Liste finale des colonnes\n",
     "all_columns = list(ohe_columns) + passthrough_columns\n",
@@ -2470,10 +2474,15 @@
     "# Logger les hyperparamètres dans wandb\n",
     "wandb.config.update(xgb_params)\n",
     "\n",
+    "y_predicted_advanced_2 = xgb_advanced_2.predict(x_val_transformed_2)\n",
+    "\n",
     "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced_2)\n",
+    "f1 = f1_score(y_predicted_advanced_2, y_val, average=\"macro\")\n",
+    "ece = compute_ece(y_val, y_predicted_prob_advanced_2)\n",
+    "\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"val_roc_auc\": auc_roc})\n",
+    "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score\": f1, \"val_expected_cal_error\": ece })\n",
     "\n",
     "model_path = \"XGBoost_improved_with_selected_features.pkl\"\n",
     "with open(model_path, \"wb\") as f:\n",
@@ -2673,7 +2682,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: CODE ICI"
+    "#TODO: CODE ICI\n",
+    "\n",
+    "characteristics = xgb_num_characteristics + xgb_categorial_characteristics\n",
+    "\n",
+    "x_test = regular_test_data[characteristics].dropna()\n",
+    "y_test = regular_test_data['isGoal'][x_test.index].to_numpy()\n",
+    "\n",
+    "x_test_transformed = full_pipeline.fit_transform(x_test)\n",
+    "\n",
+    "# Initialize a run\n",
+    "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
+    "\n",
+    "# Access and download model. Returns path to downloaded artifact\n",
+    "downloaded_model_path = run.use_model(name = \"XGBoost_improved_with_new_features:latest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "211abd1d-1ab6-4032-9268-748ba2dfee25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    xgb_model = pickle.load(file)\n",
+    "\n",
+    "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
+    "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
+    "f1 = f1_score(y_pred_xgb, y_test, average=\"macro\")\n",
+    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
+    "\n",
+    "print(f\"F1 Macro: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
    ]
   },
   {
