typo fix + image name changed

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -1732,7 +1732,8 @@
     "RocCurveDisplay.from_predictions(y_val, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
     "plt.title(\"ROC Curve for XGBoost Model\")\n",
     "plt.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# plt.savefig('modele_avance_q1_roc.png', dpi=300)"
    ]
   },
   {
@@ -1869,7 +1870,7 @@
     "ece = compute_ece(y_val, y_predicted_prob)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
-    "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
+    "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
