addition of code to save graphic's images

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -2086,9 +2086,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 6))\n",
+    "plt.figure(figsize=(15, 8))\n",
     "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
     "\n",
     "plt.title(\"ROC Curves for XGBoost Models\")\n",
     "plt.grid(True)\n",
@@ -2116,7 +2116,7 @@
     "# Tracer les taux de buts\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(percentiles[:-1], goal_rate_basic, label=\"XGBoost basique\", color=\"blue\")\n",
-    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé\", color=\"green\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\")\n",
     "\n",
     "plt.title(\"Taux de buts par centile de probabilité\")\n",
     "plt.xlabel(\"Centile de probabilité\")\n",
@@ -2162,7 +2162,7 @@
     "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
     "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé\")\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
     "\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
     "plt.show()"
@@ -2281,8 +2281,7 @@
     "# Définir plusieurs seuils pour les importances\n",
     "thresholds = np.linspace(0, max(importances), 10)\n",
     "\n",
-    "print('importances')\n",
-    "print(importances)\n",
+    "print(min(importances), max(importances)) # 0.0005237490370182553 0.10476373782698718\n",
     "\n",
     "# Initialiser les variables pour suivre les scores et les seuils\n",
     "scores_by_threshold = []\n",
@@ -2328,9 +2327,8 @@
     "# Afficher le graphique\n",
     "plt.tight_layout()\n",
     "plt.grid()\n",
+    "plt.savefig('modele_avance_q3_feature_selection_random_forest.png', dpi=300)\n",
     "plt.show()\n",
-    "\n",
-    "plt.savefig('feature_selection_random_forest')\n",
     "'''"
    ]
   },
@@ -2426,13 +2424,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 6))\n",
+    "plt.figure(figsize=(15, 8))\n",
     "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, name=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\", ax=plt.gca())\n",
     "\n",
     "plt.title(\"ROC Curves for XGBoost Models\")\n",
     "plt.grid(True)\n",
+    "plt.savefig('modele_avance_q3_roc.png', dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -2459,7 +2458,7 @@
     "# Tracer les taux de buts\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(percentiles[:-1], goal_rate_basic, label=\"XGBoost basique\", color=\"blue\")\n",
-    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé\", color=\"green\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_advanced, label=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\")\n",
     "plt.plot(percentiles[:-1], goal_rate_advanced_2, label=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\")\n",
     "\n",
     "\n",
@@ -2470,6 +2469,7 @@
     "plt.ylim(0, 100)\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "plt.savefig('modele_avance_q3_goal_rate.png', dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -2499,10 +2499,11 @@
     "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
     "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé\")\n",
+    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
     "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques sélectionnées\")\n",
     "\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
+    "plt.savefig('modele_avance_q3_reliability_diagram.png', dpi=300)\n",
     "plt.show()"
    ]
   },
