advanced models : new images

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -1663,9 +1663,9 @@
    "outputs": [],
    "source": [
     "# Sélection des caractéristiques\n",
-    "characteristics = ['shotDistance', 'shotAngle']\n",
+    "xgb_basic_characteristics = ['shotDistance', 'shotAngle']\n",
     "\n",
-    "x = train_data[characteristics].dropna()\n",
+    "x = train_data[xgb_basic_characteristics].dropna()\n",
     "y = train_data['isGoal'][x.index]"
    ]
   },
@@ -1676,7 +1676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
+    "x_train_basic, x_val_basic, y_train_basic, y_val_basic = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
@@ -1687,7 +1687,7 @@
    "outputs": [],
    "source": [
     "xgb = XGBClassifier(objective='binary:logistic')\n",
-    "xgb.fit(x_train, y_train)"
+    "xgb.fit(x_train_basic, y_train_basic)"
    ]
   },
   {
@@ -1714,7 +1714,7 @@
    "outputs": [],
    "source": [
     "# Probabilités pour la classe \"but\"\n",
-    "y_predicted_prob = xgb.predict_proba(x_val)[:, 1]"
+    "y_predicted_prob_basic = xgb.predict_proba(x_val_basic)[:, 1]"
    ]
   },
   {
@@ -1725,11 +1725,11 @@
    "outputs": [],
    "source": [
     "# Ligne de base aléatoire\n",
-    "y_proba_random = np.random.uniform(0, 1, len(y_val))\n",
+    "y_proba_random = np.random.uniform(0, 1, len(y_val_basic))\n",
     "plt.figure(figsize=(10, 6))\n",
     "# ROC\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob, name=\"XGBoost\", color=\"blue\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, name=\"XGBoost\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_basic, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
     "plt.title(\"ROC Curve for XGBoost Model\")\n",
     "plt.grid(True)\n",
     "plt.show()\n",
@@ -1762,7 +1762,7 @@
    "outputs": [],
    "source": [
     "percentiles = np.linspace(0, 100, 11)\n",
-    "goal_rates = compute_goal_rate_by_percentile(y_val, y_predicted_prob, percentiles)\n",
+    "goal_rates = compute_goal_rate_by_percentile(y_val_basic, y_predicted_prob_basic, percentiles)\n",
     "\n",
     "plot_line_2_variables(x=percentiles[:-1], y=goal_rates, color='green', label=\"Taux de buts par centile des probabilités prédites\", xinf=100, xsup=0, x_label=\"Centiles des probabilités prédites\", y_label=\"Taux de buts (%)\")"
    ]
@@ -1802,7 +1802,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob, n_bins=10, name=\"XGBoost basique\")\n",
+    "CalibrationDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, n_bins=10, name=\"XGBoost basique\")\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
     "plt.show()"
    ]
@@ -1857,17 +1857,11 @@
     "# Logger les hyperparamètres dans wandb\n",
     "wandb.config.update(xgb_params)\n",
     "\n",
-    "# Exemple : Entraîner le modèle\n",
-    "xgb = XGBClassifier(objective='binary:logistic')\n",
-    "xgb.fit(x_train, y_train)\n",
+    "y_predicted_basic = xgb.predict(x_val_basic)\n",
     "\n",
-    "# Évaluer le modèle (exemple avec AUC ROC)\n",
-    "y_predicted_prob = xgb.predict_proba(x_val)[:, 1]\n",
-    "y_predicted = xgb.predict(x_val)\n",
-    "\n",
-    "auc_roc = roc_auc_score(y_val, y_predicted_prob)\n",
-    "f1 = f1_score(y_predicted, y_val, average=\"weighted\")\n",
-    "ece = compute_ece(y_val, y_predicted_prob)\n",
+    "auc_roc = roc_auc_score(y_val_basic, y_predicted_prob_basic)\n",
+    "f1 = f1_score(y_predicted, y_val_basic, average=\"weighted\")\n",
+    "ece = compute_ece(y_val_basic, y_predicted_prob_basic)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
@@ -2050,7 +2044,7 @@
     "x = train_data[characteristics].dropna()\n",
     "y = train_data['isGoal'][x.index]\n",
     "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
+    "x_train_advanced, x_val_advanced, y_train_advanced, y_val_advanced = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
   {
@@ -2060,15 +2054,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_basic.fit(x_train[['shotDistance', 'shotAngle']], y_train)\n",
+    "xgb_basic.fit(x_train_basic, y_train_basic)\n",
     "\n",
-    "x_train_transformed = full_pipeline.fit_transform(x_train)\n",
-    "x_val_transformed = full_pipeline.fit_transform(x_val)\n",
+    "x_train_advanced = full_pipeline.fit_transform(x_train_advanced)\n",
+    "x_val_advanced = full_pipeline.fit_transform(x_val_advanced)\n",
     "\n",
-    "xgb_advanced.fit(x_train_transformed, y_train)\n",
+    "xgb_advanced.fit(x_train_advanced, y_train_advanced)\n",
     "\n",
-    "y_predicted_prob_basic = xgb_basic.predict_proba(x_val[['shotDistance', 'shotAngle']])[:, 1]\n",
-    "y_predicted_prob_advanced = xgb_advanced.predict_proba(x_val_transformed)[:, 1]"
+    "y_predicted_prob_basic = xgb_basic.predict_proba(x_val_basic)[:, 1]\n",
+    "y_predicted_prob_advanced = xgb_advanced.predict_proba(x_val_advanced)[:, 1]"
    ]
   },
   {
@@ -2087,8 +2081,8 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 8))\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_advanced, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
     "\n",
     "plt.title(\"ROC Curves for XGBoost Models\")\n",
     "plt.grid(True)\n",
@@ -2110,8 +2104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_rate_basic = compute_goal_rate_by_percentile(y_val, y_predicted_prob_basic, percentiles)\n",
-    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced, percentiles)\n",
+    "goal_rate_basic = compute_goal_rate_by_percentile(y_val_basic, y_predicted_prob_basic, percentiles)\n",
+    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val_advanced, y_predicted_prob_advanced, percentiles)\n",
     "\n",
     "# Tracer les taux de buts\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -2161,8 +2155,8 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
+    "CalibrationDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
+    "CalibrationDisplay.from_predictions(y_val_advanced, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
     "\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
     "plt.show()"
@@ -2201,11 +2195,11 @@
     "# Logger les hyperparamètres dans wandb\n",
     "wandb.config.update(xgb_params)\n",
     "\n",
-    "y_predicted_advanced = xgb_advanced.predict(x_val_transformed)\n",
+    "y_predicted_advanced = xgb_advanced.predict(x_val_advanced)\n",
     "\n",
-    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced)\n",
-    "f1 = f1_score(y_predicted_advanced, y_val, average=\"weighted\")\n",
-    "ece = compute_ece(y_val, y_predicted_prob_advanced)\n",
+    "auc_roc = roc_auc_score(y_val_advanced, y_predicted_prob_advanced)\n",
+    "f1 = f1_score(y_predicted_advanced, y_val_advanced, average=\"weighted\")\n",
+    "ece = compute_ece(y_val_advanced, y_predicted_prob_advanced)\n",
     "\n",
     "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
     "\n",
@@ -2388,25 +2382,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_val, y_train, y_val = train_test_split(x_full_train, y_full_train, test_size=0.2, random_state=42, stratify=y_full_train)\n",
+    "x_train_advanced_2, x_val_advanced_2, y_train_advanced_2, y_val_advanced_2 = train_test_split(x_full_train, y_full_train, test_size=0.2, random_state=42, stratify=y_full_train)\n",
     "\n",
-    "xgb_basic = XGBClassifier(objective='binary:logistic')\n",
-    "xgb_advanced = XGBClassifier(objective='binary:logistic', **best_params)\n",
     "xgb_advanced_2 = XGBClassifier(objective='binary:logistic', **best_params)\n",
     "\n",
-    "x_train_transformed = full_pipeline.fit_transform(x_train)\n",
-    "x_train_transformed_2 = selector.transform(x_train_transformed)\n",
+    "x_train_advanced_2 = full_pipeline.fit_transform(x_train_advanced_2)\n",
+    "x_train_advanced_2 = selector.transform(x_train_advanced_2)\n",
     "\n",
-    "x_val_transformed = full_pipeline.fit_transform(x_val)\n",
-    "x_val_transformed_2 = selector.transform(x_val_transformed)\n",
+    "x_val_advanced_2 = full_pipeline.fit_transform(x_val_advanced_2)\n",
+    "x_val_advanced_2 = selector.transform(x_val_advanced_2)\n",
     "\n",
-    "xgb_basic.fit(x_train[['shotDistance', 'shotAngle']], y_train)\n",
-    "xgb_advanced.fit(x_train_transformed, y_train)\n",
-    "xgb_advanced_2.fit(x_train_transformed_2, y_train)\n",
+    "xgb_advanced_2.fit(x_train_advanced_2, y_train_advanced_2)\n",
     "\n",
-    "y_predicted_prob_basic = xgb_basic.predict_proba(x_val[['shotDistance', 'shotAngle']])[:, 1]\n",
-    "y_predicted_prob_advanced = xgb_advanced.predict_proba(x_val_transformed)[:, 1]\n",
-    "y_predicted_prob_advanced_2 = xgb_advanced_2.predict_proba(x_val_transformed_2)[:, 1]"
+    "y_predicted_prob_advanced_2 = xgb_advanced_2.predict_proba(x_val_advanced_2)[:, 1]"
    ]
   },
   {
@@ -2425,9 +2413,9 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15, 8))\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
-    "RocCurveDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, name=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, name=\"XGBoost basique (Distance et angle)\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_advanced, y_predicted_prob_advanced, name=\"XGBoost avancé - caractéristiques nouvelles\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_val_advanced_2, y_predicted_prob_advanced_2, name=\"XGBoost avancé - caractéristiques sélectionnées\", color=\"red\", ax=plt.gca())\n",
     "\n",
     "plt.title(\"ROC Curves for XGBoost Models\")\n",
     "plt.grid(True)\n",
@@ -2450,9 +2438,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_rate_basic = compute_goal_rate_by_percentile(y_val, y_predicted_prob_basic, percentiles)\n",
-    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced, percentiles)\n",
-    "goal_rate_advanced_2 = compute_goal_rate_by_percentile(y_val, y_predicted_prob_advanced_2, percentiles)\n",
+    "goal_rate_basic = compute_goal_rate_by_percentile(y_val_basic, y_predicted_prob_basic, percentiles)\n",
+    "goal_rate_advanced = compute_goal_rate_by_percentile(y_val_advanced, y_predicted_prob_advanced, percentiles)\n",
+    "goal_rate_advanced_2 = compute_goal_rate_by_percentile(y_val_advanced_2, y_predicted_prob_advanced_2, percentiles)\n",
     "\n",
     "\n",
     "# Tracer les taux de buts\n",
@@ -2498,9 +2486,9 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
-    "CalibrationDisplay.from_predictions(y_val, y_predicted_prob_advanced_2, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques sélectionnées\")\n",
+    "CalibrationDisplay.from_predictions(y_val_basic, y_predicted_prob_basic, n_bins=10, ax=ax, name=\"XGBoost basique\")\n",
+    "CalibrationDisplay.from_predictions(y_val_advanced, y_predicted_prob_advanced, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques nouvelles\")\n",
+    "CalibrationDisplay.from_predictions(y_val_advanced_2, y_predicted_prob_advanced_2, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques sélectionnées\")\n",
     "\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
     "plt.savefig('modele_avance_q3_reliability_diagram.png', dpi=300)\n",
@@ -2540,12 +2528,11 @@
     "# Logger les hyperparamètres dans wandb\n",
     "wandb.config.update(xgb_params)\n",
     "\n",
-    "y_predicted_advanced_2 = xgb_advanced_2.predict(x_val_transformed_2)\n",
+    "y_predicted_advanced_2 = xgb_advanced_2.predict(x_val_advanced_2)\n",
     "\n",
-    "auc_roc = roc_auc_score(y_val, y_predicted_prob_advanced_2)\n",
-    "f1 = f1_score(y_predicted_advanced_2, y_val, average=\"weighted\")\n",
-    "ece = compute_ece(y_val, y_predicted_prob_advanced_2)\n",
-    "\n",
+    "auc_roc = roc_auc_score(y_val_advanced_2, y_predicted_prob_advanced_2)\n",
+    "f1 = f1_score(y_predicted_advanced_2, y_val_advanced_2, average=\"weighted\")\n",
+    "ece = compute_ece(y_val_advanced_2, y_predicted_prob_advanced_2)\n",
     "\n",
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
